--- a/.gitignore
+++ b/.gitignore
@@ -6,14 +6,14 @@
 !*.yaml
 !.gitignore
 !*.md
-home-assistant.log
+!*.home-assistant.log
 
 # Ignore folders.
 .storage
 .cloud
 .google.token
 www
-custom_components
+.custom_components
 
 
 # Ensure these YAML files are ignored, otherwise your secret data/credentials will leak.
