--- a/configuration.yaml
+++ b/configuration.yaml
@@ -102,11 +102,10 @@ device_tracker:
       minutes: 30
       
 #harmony
-
-#remote:
-   #- platform: harmony
- #    name: HarmonyHub
-   #  host: 192.168.178.4
+remote:
+  - platform: harmony
+    name: HarmonyHub
+    host: 192.168.178.4
     
 #notify
 notify:
