--- a/configuration.yaml
+++ b/configuration.yaml
@@ -89,17 +89,17 @@ vacuum:
     token: !secret tokenfrits
     name: frits
     
-#telefoon tracker
+#telefoon tracker life360
 
-# device_tracker:
-  # - platform: life360
-    # username: !secret mail
-    # password: !secret life360 
-    # interval_seconds: 10
-    # filename: life360.conf
-    # show_as_state: places, driving, moving
-    # max_update_wait:
-      # minutes: 30
+device_tracker:
+  - platform: life360
+    username: !secret mail
+    password: !secret life360 
+    interval_seconds: 10
+    filename: life360.conf
+    show_as_state: places, driving, moving
+    max_update_wait:
+      minutes: 30
       
 #harmony
 remote:
