--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,10 @@
 !*.home-assistant.log
 !*.js
 !*.sh
+!custom_components/
 !custom_components/*
+!custom_components*
+!custom_components
 
 # Ignore folders.
 .storage
