--- a/configuration.yaml
+++ b/configuration.yaml
@@ -13,6 +13,10 @@ homeassistant:
   # Customization file
   customize: !include customize.yaml
 
+#includes
+frontend:
+  themes: !include themes.yaml
+
 # YAML MODE
 
 lovelace:
