--- a/configuration.yaml
+++ b/configuration.yaml
@@ -171,3 +171,11 @@ google_assistant:
     - group
     - script
     - climate 
+    
+speedtestdotnet:
+  scan_interval:
+    minutes: 30
+  monitored_conditions:
+    - ping
+    - download
+    - upload
