--- a/sensor.yaml
+++ b/sensor.yaml
@@ -11,7 +11,12 @@
     - dns_queries_today
     - ads_percentage_today
     - unique_clients
- 
+    
+- platform: systemmonitor
+  resources:
+    - type: disk_use_percent
+      arg: /home
+    - type: memory_free 
     
 - platform: template
   sensors:
